static html and first controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password=0000
 
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.formate_sql = true
+spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.show-sql = true
