--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.show-sql = true
 
 spring.data.rest.basePath=/rest
+
+fred.apikey=01abe1e1dcca2179ebe9781177bd43e8
